[project]
name = "pytorch"
version = "0.1.0"
description = "The simplest python program, with python wrapper and c++ backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
