[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpredictor"
version = "0.1.0"
description = "A simple machine learning package using scikit-learn"
authors = [
    {name = "Ebrahim", email = "ebimsv0501@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "scikit-learn>=1.0",
]

# 添加测试依赖组
[project.optional-dependencies]
tests = [
    "pytest>=8.1.1",  # 推荐指定最低版本
]

[project.urls]
"Homepage" = "https://github.com/ebimsv/mlpredictor"